projects/compiler/test/typechecker/typedecl/error_duplicate_type_func.out
Error at %FILE_NAME%:3:6
Duplicate name 'Foo'
  |  func Foo() {}
          ^
This name is also declared at (1:6)
  |  type Foo { a: Int }
          ^
