projects/compiler/test/typechecker/typedecl/error_duplicate_type_func.abra
type Foo { a: Int }

func Foo() {}